--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,46 +1,18 @@
+/*
+ * Base structure
+ */
+
+
+/* Move down content because we have a fixed navbar that is 50px tall */
+
 body {
     padding-top: 50px;
 }
 
-a,a:hover,a:focus,a:active{
-    text-decoration: none;
-}
-ul,li{
-    list-style:none;
-    padding: 0;
-}
-/*重写boostrap*/
-.navbar-fixed-top {
-    background: rgb(12,126,217);
-    /* border-bottom: 1px solid rgb(179, 179, 179); */
-    top: 0;
-    color: rgb(38, 38, 38);
-    border-width: 0 0 1px;
-    padding: 3px 43px;
-}
-.navbar-brand {
-    background: url(../images/SCUT.png) no-repeat left center;
-    background-size: cover;
-    width: 200px;
-}
 
-.navbar-nav > li > a {
-    color:#fff;
-}
-.navbar-nav > li > a:hover{
-    background-color: hsla(0,0%,100%,0.3)
-}
-
-span.glyphicon {
-    color: rgb(0, 0, 255);
-}
-
-.dropdown-menu li a{
-    color: rgb(255, 255, 255);
-    padding:10px 20px;
-    transition: all 0.3s;
-}
-
+/*
+ * Global add-ons
+ */
 
 .sub-header {
     padding-bottom: 10px;
@@ -64,15 +36,9 @@ span.glyphicon {
 
 
 /* Hide for mobile, show later */
+
 .sidebar {
-    background-color: rgb(27,169,233);
-    padding: 0;
-    position: fixed;
-    height: 100%;
-    top: 50px;
-    left: 0px;
-    overflow: hidden;
-    outline: none;
+    display: none;
 }
 
 @media (min-width: 768px) {
@@ -83,69 +49,38 @@ span.glyphicon {
         left: 0;
         z-index: 1000;
         display: block;
+        padding: 20px;
         overflow-x: hidden;
         overflow-y: auto;
         /* Scrollable contents if viewport is shorter than content. */
+        background-color: #f5f5f5;
         border-right: 1px solid #eee;
     }
 }
 
 
 /* Sidebar navigation */
-.navigation {
-    margin: 50px 0px 20px;
+
+.nav-sidebar {
+    margin-right: -21px;
+    /* 20px padding + 1px border */
+    margin-bottom: 20px;
+    margin-left: -20px;
 }
 
-.navigation>ul>li {
-    position: relative;
-    display: list-item;
-    text-align: -webkit-match-parent;
-}
-.navigation ul li a i {
-    margin-right: 12px;
-    margin-top: 2px;
-    width: 20px;
-    float: left;
-    height: 19px;
+.nav-sidebar > li > a {
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
-.navigation ul li:nth-of-type(1) a i {
-    background: url(../images/logo.png);
-    background-size: contain;
+.nav-sidebar > .active > a, .nav-sidebar > .active > a:hover, .nav-sidebar > .active > a:focus {
+    color: #fff;
+    background-color: #428bca;
 }
 
-.navigation ul li:nth-of-type(2) a i {
-    background: url(../images/0_info.ico);
-    background-size: contain;
+ul.nav.nav-sidebar {
+    text-align: center;
 }
-
-.navigation ul li:nth-of-type(3) a i {
-    background: url(../images/paper.ico);
-    background-size: contain;
-}
-
-.navigation>ul>li>a {
-    display: block;
-    padding: 15px 18%;
-    font-size: 16px;
-    color:#fff ;
-    text-decoration: none;
-    transition: all 0.45s;
-    -moz-transition: all 0.3s;
-    -webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    font-weight: 400;
-    outline: none !important;
-}
-.navigation>ul>li>a:hover,.navigation>ul>li>a:active,.navigation>ul>li>a:visited{
-    background: rgba(85, 136, 170, 0.35);
-}
-
-
-
-
-
-
 
 .btn-success {
     box-shadow: inset -1px -1px 2px rgba(0, 0, 0, 0.3);
@@ -171,16 +106,6 @@ span.glyphicon {
 .main .page-header {
     margin-top: 0;
 }
-
-ul#class_list {
-    position: relative;
-    float: none;
-    text-align: center;
-    border: none;
-    border-radius: 0;
-    background: rgba(210, 215, 214, 0.31);
-}
-
 
 
 /*
