--- a/src/main/resources/templates/classManagement.html
+++ b/src/main/resources/templates/classManagement.html
@@ -14,15 +14,15 @@
 
 <body class="easyui-layout">
     <div data-options="region:'north',border:false" id="top">
-        <h2><a href="teacherIndex.html">教师管理系统</a><span>华南理工大学</span></h2>
+        <h2><a href="teacherIndex">教师管理系统</a><span>华南理工大学</span></h2>
         <p id="teacher_info"><strong id="{TEACHERID}">{TEACHERNAME}</strong>&nbsp;教师，您好！</p>
     </div>
     <div data-options="region:'west',split:true,title:'信息管理'" id="west">
         <ul class="main_menu">
-            <li><a href="classManagement.html" class="active">班级信息</a> </li>
-            <li><a href="paperManagement.html">试题管理</a> </li>
-            <li> <a href="paperMark.html">考卷评阅</a></li>
-            <li><a href="detailGrade.html">详细成绩</a></li>
+            <li><a href="classManagement" class="active">班级信息</a> </li>
+            <li><a href="paperManagement">试题管理</a> </li>
+            <li> <a href="paperMark">考卷评阅</a></li>
+            <li><a href="detailGrade">详细成绩</a></li>
         </ul>
     </div>
     <div data-options="region:'center',split:true" title="" id="center">
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div data-options="region:'east',split:true,collapsed:true" title="学生成绩" id="east">
-        <p class="title"><strong>廖晓娟</strong>&nbsp;同学</p>
+        <p class="title"><strong></strong>&nbsp;同学</p>
         <table class="easyui-datagrid" id="student_grade_dg" data-options="rownumbers:true,singleSelect:true,method:'get'">
             <thead>
                 <tr>
