--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="dbSystem"/>
-    <meta name="author" content="kasmine"/>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="dbSystem" />
+    <meta name="author" content="kasmine" />
     <!-- <link rel="icon" href="../../favicon.ico"> -->
     <title>管理员系统</title>
     <!-- Bootstrap core CSS -->
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -26,11 +26,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">华南理工大学</a>
+                <a class="navbar-brand" href="#"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">平台介绍</a></li>
                     <li><a href="#">退出</a></li>
                 </ul>
                 <form class="navbar-form navbar-right">
@@ -42,26 +41,70 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3 col-md-2 sidebar">
-                <ul class="nav nav-sidebar">
-                    <li class="active"><a href="#">信息管理</a></li>
-                    <li> <a id="dLabel" data-target="#" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">班级管理<span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel" id="class_list">
-                            <script type="text/template" id="classListTemplate">
-                                <li>
-                                    <a href="javascript:void(0)" onclick="openPanel('.class_panel')" id="{CLASSID}">{CLASSNAME}</a>
+                <nav class="navigation">
+                    <ul class="">
+                        <li class="active"><a href="javascript:void(0)" class="mainLnk" onclick="openPanel('.main_panel')"><i></i>平台介绍</a></li>
+                        <li> <a id="dLabel" data-target="#" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="mainLnk"><i></i>班级管理<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel" id="class_list">
+                                <script type="text/template" id="classListTemplate">
+                                    <li>
+                                        <a href="javascript:void(0)" onclick="openPanel('.class_panel')" id="{CLASSID}">{CLASSNAME}</a>
+                                    </li>
+                                </script>
+                                <li class="last">
+                                    <button data-toggle="modal" data-target="#addClassModal" class="btn btn-success">添加班级</button>
                                 </li>
-                            </script>
-                        </ul>
-                    </li>
-                    <li><a href="javascript:void(0)" onclick="openPanel('.teacher_panel')">教师管理</a></li>
-                </ul>
-                <ul class="nav nav-sidebar">
-                    <li>
-                        <button data-toggle="modal" data-target="#addClassModal" class="btn btn-success">添加班级</button>
-                    </li>
-                </ul>
+                            </ul>
+                        </li>
+                        <li><a href="javascript:void(0)" class="mainLnk" onclick="openPanel('.teacher_panel')"><i></i>教师管理</a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main class_panel">
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main main_panel">
+                <div class="carousel slide" id="guide-block" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <h1 class="page-header">管理员平台系统</h1>
+                            <div class="guide-content">
+                                <img width="269" height="269" src="http://static.guokr.com/apps/academy/images/a66f9841.guide1-1.png" alt="华南理工大学考试系统"/>
+                                <p>
+                                    这里介绍我们的管理员平台系统
+                                </p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <h1 class="page-header">友情链接</h1>
+                            <ul class="guide-content friendly_lnk">
+                                <li class="shade">
+                                    <a href="http://www.scut.edu.cn/new/"> <img src="images/SCUT官网.jpg" alt="华南理工大学官网"/>
+                                        <p>华南理工大学官网</p>
+                                    </a>
+                                </li>
+                                <li class="shade">
+                                    <a href="http://www.scut.edu.cn/jw2005/"> <img src="images/jw2005.png" alt="华南理工大学教务管理系统"/>
+                                        <p>华南理工大学教务管理系统</p>
+                                    </a>
+                                </li>
+                                <li class="shade">
+                                    <a href="http://222.16.42.161/eol/homepage/common/">
+                                        <img src="images/homepage.png" alt="华南理工大学教学在线"/>
+                                        <p>华南理工大学教学在线</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <a class="left carousel-control" href="#guide-block" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#guide-block" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main class_panel hide">
                 <h1 class="page-header">班级信息管理</h1>
                 <p>
                     <button class="btn btn-success btn-sm" onclick="append('#student_dg')">添加</button>
@@ -127,7 +170,7 @@
                             <input class="form-control" type="text" name="add_class_name" data-options="required:true" />
                         </div>
                         <div class="form-group">
-                            <label for="add_class_teacher">班主任姓名:</label>
+                            <label for="add_class_teacher">班主任职工号:</label>
                             <input class="form-control" type="text" name="add_class_teacher" data-options="required:true" />
                         </div>
                     </form>
@@ -170,7 +213,7 @@
                 <input class="form-control input-sm" type="text" name="password" value="{PASSWORD}" disabled="" size='12'/>
             </td>
             <td>
-                <input class="form-control input-sm" type="text" name="class_name" value="{CLASSNAME}" disabled="" size='12'/>
+                <input class="form-control input-sm" type="" name="class_name" value="{CLASSNAME}" disabled="" size='12'/>
             </td>
             <td>
                 <button disabled="true" onclick="saverow(this)" class="btn btn-success btn-sm">Save</button>
